Bug 868806 - Handle OMXCodec's error. r=doublec